--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,11 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="titulo_agregar">AGREGAR PERSONAS</string>
+    <string name="agregar_pesona">AGREGAR PERSONAS</string>
+    <string name="nombre">Nombre</string>
+    <string name="apellido">Apellido</string>
+    <string name="cedula">Cédula</string>
+    <string name="boton_guardar">GUARDAR</string>
+    <string name="boton_limpiar">LIMPIAR</string>
 </resources>
