--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="cedula">Cédula</string>
     <string name="boton_guardar">GUARDAR</string>
     <string name="boton_limpiar">LIMPIAR</string>
+    <string name="mensaje_guardado_correcto">Persona guardada exitosamente</string>
 </resources>
