Interfaz detalle persona lista, pendiente corergir error de foto

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="boton_guardar">GUARDAR</string>
     <string name="boton_limpiar">LIMPIAR</string>
     <string name="mensaje_guardado_correcto">Persona guardada exitosamente</string>
+    <string name="titulo_detalle">DETALLE PERSONA</string>
 </resources>
