FabMenu agregado, control del flujo hacia atras terminado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="boton_limpiar">LIMPIAR</string>
     <string name="mensaje_guardado_correcto">Persona guardada exitosamente</string>
     <string name="titulo_detalle">DETALLE PERSONA</string>
+    <string name="etiqueta_boton_eliminar">Eliminar</string>
 </resources>
