Aplicacion funcional local

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,8 @@
     <string name="mensaje_guardado_correcto">Persona guardada exitosamente</string>
     <string name="titulo_detalle">DETALLE PERSONA</string>
     <string name="etiqueta_boton_eliminar">Eliminar</string>
+    <string name="titulo_eliminar_persona">Eliminar Persona</string>
+    <string name="pregunta_mensaje_eliminar">¿Está seguto que desea eliminar a esta persona?</string>
+    <string name="opcion_si">Si</string>
+    <string name="opcion_no">No</string>
 </resources>
