--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="pregunta_mensaje_eliminar">¿Está seguto que desea eliminar a esta persona?</string>
     <string name="opcion_si">Si</string>
     <string name="opcion_no">No</string>
+    <string name="titulo_ventana_seleccionar_foto">Seleccione la foto</string>
 </resources>
